Added DB.RereadConfig option to the example config

--- a/mkp.conf
+++ b/mkp.conf
@@ -18,3 +18,6 @@ HighlightForeground=black
 [Directories]
 Song=/home/major/Music/Karaoke
 Lyrics=/home/major/Documents/lyrics
+
+[DB]
+RereadPeriod=120
